# settings

./: .gitignore  disc_usage_for_folder.sh  dunstrc  kitty.conf  tmux.conf
i3/: config  i3status.conf
i3/i3blocks/: config  config_freebsd  config_linux
i3/i3blocks/battery/: battery
i3/i3blocks/freebsd/: config_freebsd
i3/i3blocks/freebsd/battery/: batt.sh
i3/i3blocks/freebsd/cpu/: .nvim.lua  CMakeLists.txt
i3/i3blocks/freebsd/cpu/src/: main.c
i3/i3blocks/freebsd/disk/: disk
i3/i3blocks/freebsd/memory/: .nvim.lua  CMakeLists.txt
i3/i3blocks/freebsd/memory/src/: main.c
i3/i3blocks/freebsd/net/: .nvim.lua  CMakeLists.txt
i3/i3blocks/freebsd/net/src/: main.c
i3/i3blocks/freebsd/volume-pipewire/: volume-pipewire
i3/i3blocks/linux/: config_linux
i3/i3blocks/linux/cpu_usage2/: cpu_usage2.c
i3/i3blocks/linux/volume-pipewire/: volume-pipewire
i3/i3blocks/linux/xkb_layout/: xkb_layout
i3/i3blocks/volume-pulseaudio/: volume-pulseaudio
i3/i3blocks/xkb_layout/: xkb_layout
network/: 20-wired.network  25-wireless.network
nvim/: README.md  init.lua  lazy-lock.json
nvim/after/plugin/: color.lua  dap.lua  lsp.lua  lualine.lua  neotree.lua  nvim-comment.lua  telescope.lua  toggleterm.lua  treesitter.lua
nvim/lua/: .luarc.json
nvim/lua/lezh1k/: common_remaps.lua  init.lua  lazy.lua  packer.lua  set.lua
nvim/lua/lezh1k/lsp/: clangd_cfg.lua  golang_cfg.lua  lua_cfg.lua  pylsp_cfg.lua
nvim/plugin/: packer_compiled.lua
screen/: big.sh  both.sh  medium.sh  small.sh
startpage/: manifest.json  startpage.html
startpage/styles/: startpage.css
timers/: anzhumanya.sh  lazyass.service  lazyass.timer
